started mediation database implementation

--- a/webapp/view/mediation.html
+++ b/webapp/view/mediation.html
@@ -22,7 +22,7 @@
 ?>
 <p class="<?= $message['class']; ?>"><?= $message['details']; ?></p>
 
-<form name="dispute" method="post">
+<form method="post">
 
     <div class="row">
         <div class='col-sm-6'>
