--- a/webapp/view/evidence_new.html
+++ b/webapp/view/evidence_new.html
@@ -1,27 +1,10 @@
-<?php
-    if (Base::instance()->get('error_message')) {
-        $message = array(
-            'class'   => 'bg-padded bg-danger',
-            'details' => Base::instance()->get('error_message')
-        );
-    }
-    else if (Base::instance()->get('success_message')) {
-        $message = array(
-            'class'   => 'bg-padded bg-success',
-            'details' => Base::instance()->get('success_message')
-        );
-    }
-    else {
-        $message = array(
-            'class'   => 'bg-padded bg-info',
-            'details' => 'Upload a file below. It should be below 2MB.'
-        );
-    }
-?>
+<?php if (noSystemMessages()) : ?>
+    <p class="bg-padded bg-info">
+        Upload a file below. It should be below 2MB.
+    </p>
+<?php endif; ?>
 
 <h1>Upload evidence</h1>
-
-<p class="<?= $message['class']; ?>"><?= $message['details']; ?></p>
 
 <form action="<?php echo $dispute->getUrl(); ?>/evidence" method="post" enctype="multipart/form-data">
     <div class="col-lg-12">
