--- a/webapp/view/login.html
+++ b/webapp/view/login.html
@@ -1,20 +1,10 @@
 <h1>Login</h1>
 
-<?php
-    if (Base::instance()->get('error_message')) {
-        $message = array(
-            'class'   => 'bg-padded bg-danger',
-            'details' => Base::instance()->get('error_message')
-        );
-    }
-    else {
-        $message = array(
-            'class'   => 'bg-padded bg-info',
-            'details' => 'Welcome to the login screen.'
-        );
-    }
-?>
-<p class="<?= $message['class']; ?>"><?= $message['details']; ?></p>
+<?php if (noSystemMessages()) : ?>
+    <p class="bg-padded bg-info">
+        Welcome to the login screen.
+    </p>
+<?php endif; ?>
 
 <form name="login" method="post">
     <label for="email" class="sr-only">Email:</label> <input type="text" name="email" id="email" class="form-control" placeholder="Email" value="<?php $email = Base::instance()->get('user_email'); echo $email ? $email : ''; ?>" />
