--- a/webapp/view/register_organisation.html
+++ b/webapp/view/register_organisation.html
@@ -1,27 +1,11 @@
 <div class="col-lg-12">
     <h1>Register</h1>
 
-    <?php
-        if (Base::instance()->get('error_message')) {
-            $message = array(
-                'class'   => 'bg-padded bg-danger',
-                'details' => Base::instance()->get('error_message')
-            );
-        }
-        else if (Base::instance()->get('success_message')) {
-            $message = array(
-                'class'   => 'bg-padded bg-success',
-                'details' => Base::instance()->get('success_message')
-            );
-        }
-        else {
-            $message = array(
-                'class'   => 'bg-padded bg-info',
-                'details' => 'Welcome to the registration screen.'
-            );
-        }
-    ?>
-    <p class="<?= $message['class']; ?>"><?= $message['details']; ?></p>
+    <?php if (noSystemMessages()) : ?>
+        <p class="bg-padded bg-info">
+            Welcome to the registration screen.
+        </p>
+    <?php endif; ?>
 
     <p>
         By completing this registration form, you are indicating that you are an authorised representative of the Company account you're about to create.
