mediation centre can now be accepted or declined

--- a/webapp/view/lifespan_offered--received.html
+++ b/webapp/view/lifespan_offered--received.html
@@ -1,4 +1,4 @@
-<form method="post" action="/disputes/<?php echo $dispute->getDisputeId(); ?>/lifespan/respond">
+<form method="post" action="<?php echo $dispute->getUrl(); ?>/lifespan/respond">
     <p>You have been sent a lifespan offer.</p>
 
     <p>
