--- a/webapp/view/mediation_proposed.html
+++ b/webapp/view/mediation_proposed.html
@@ -1,11 +1,41 @@
-<h1>Mediation Proposal Underway</h1>
+<?php
+$mediationParty = Base::instance()->get('proposed_mediation_party');
+$proposedBy     = Base::instance()->get('proposed_by');
+$otherAgentId   = $dispute->getOpposingPartyId($proposedBy->getLoginId());
+$role           = ($mediationParty instanceof MediationCentre) ? 'Mediation Centre' : 'Mediator';
+?>
 
-<?php if (noSystemMessages()) : ?>
-    <p class="bg-padded bg-info">
-        Mediation underway.
+<h1>Mediation Proposal</h1>
+
+<?php if ($account->getLoginId() === $proposedBy->getLoginId()) : ?>
+
+    <p>
+        You have proposed to use <?php echo $mediationParty; ?> as the <?php echo $role; ?> for this dispute.
     </p>
-<?php endif; ?>
 
-<p>
-    Coming soon.
-</p>
+<?php elseif ($account->getLoginId() === $otherAgentId): ?>
+
+    <form method="post" action="<?php echo $dispute->getUrl(); ?>/mediation/respond">
+
+        <p>
+            The other agent has proposed that <?php echo $mediationParty; ?> should be the <?php echo $role; ?> in this dispute.
+        </p>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <button class="btn btn-lg btn-success btn-block" type="submit" name="resolution" value="accept">Accept</button>
+            </div>
+            <div class="col-sm-6">
+                <button class="btn btn-lg btn-danger btn-block" type="submit" name="resolution" value="decline">Decline</button>
+            </div>
+        </div>
+
+    </form>
+
+<?php else: ?>
+
+    <p>
+        @TODO - either you do not have permission to view this page (you should be agent A or B in the dispute) OR you've just accepted a Mediation Centre proposal. You now need to wait for the Mediation Centre to offer a list of Mediators. Then you can choose from the list.
+    </p>
+
+<?php endif; ?>
