--- a/webapp/view/error.html
+++ b/webapp/view/error.html
@@ -1,3 +1,1 @@
-<h1>Error</h1>
-
-<p class="bg-padded bg-danger"><?= Base::instance()->get('error_message'); ?></p>
+<!-- error message displayed in layout.html -->
