--- a/webapp/view/dispute_view--single.html
+++ b/webapp/view/dispute_view--single.html
@@ -31,6 +31,29 @@ if ($currentLifespan->accepted()) :
 endif;
 ?>
 
+
+<?php
+$mediationState = $dispute->getMediationState();
+if ($mediationState->inMediation()) :
+?>
+
+<div class="row">
+    <div class="col-sm-12">
+
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">In Mediation</h3>
+            </div>
+            <div class="panel-body">
+                Being mediated by <?php echo $mediationState->getMediator(); ?> of <?php echo $mediationState->getMediationCentre(); ?>.
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<?php endif; ?>
+
 <div class="row">
 
     <div class="col-sm-6">
