--- a/webapp/view/dashboard.html
+++ b/webapp/view/dashboard.html
@@ -5,24 +5,25 @@
 ?>
 
     <?php
+        $iconsPerRow = 3;
         $count = 0;
         foreach(Base::instance()->get('dashboardActions') as $action) :
             $action['href']  = isset($action['href'])  ? $action['href']  : '.';
             $action['image'] = isset($action['image']) ? $action['image'] : '/view/images/mail.png';
 
-            if ($count % 4 == 0 || $count == 0) {
+            if ($count % $iconsPerRow == 0 || $count == 0) {
                 echo '<div class="row">';
             }
             $count++;
     ?>
-        <div class="col-sm-3 dispute__option">
+        <div class="col-sm-<?php echo (12 / $iconsPerRow); ?> dispute__option">
             <a href="<?php echo $action['href']; ?>">
                 <img class="dispute__option__image" src="<?php echo $action['image']; ?>"/>
                 <strong class="dispute__option__title"><?php echo $action['title']; ?></strong>
             </a>
         </div>
     <?php
-            if ($count % 4 == 0) {
+            if ($count % $iconsPerRow == 0) {
                 echo '</div>';
             }
         endforeach;
