--- a/webapp/view/header--default.html
+++ b/webapp/view/header--default.html
@@ -1,14 +1,15 @@
 <header class="container">
     <div class="row">
-        <div class="col-sm-7">
+        <div class="col-sm-8">
             <a href="/"><img class="logo" src="view/images/logo.png"></a>
             <a href="/about">About</a> |
+            <a href="/workflow">Workflow</a> |
             <a href="/installation">Installation</a> |
             <a href="/docs/index.html">API Documentation</a> |
             <a href="https://github.com/ChrisBAshton/major-project">GitHub</a>
         </div>
 
-        <div class="col-sm-5 text-right">
+        <div class="col-sm-4 text-right">
             <p>
                 <a href="/login">Login</a> | <a href="/register">Register</a>
             </p>
