--- a/webapp/view/index.html
+++ b/webapp/view/index.html
@@ -1,5 +1,11 @@
 <div class="row">
     <div class="col-sm-12">
-        <?php echo Markdown::instance()->convert(Base::instance()->read(__DIR__ . '/../../README.md')); ?>
+        <p>
+            You have successfully installed SmartResolution!
+        </p>
+
+        <p>
+            For full setup and installation instructions, visit <a href="http://smartresolution.org/">SmartResolution.org</a>.
+        </p>
     </div>
 </div>
