--- a/webapp/core/view/admin_customise.html
+++ b/webapp/core/view/admin_customise.html
@@ -1,3 +1,3 @@
 <h1>Customise</h1>
 
-<p>coming soon</p>
+<p>Coming soon. This page will have various options, e.g. change logo, enable/disable mediation, etc.</p>
