--- a/webapp/core/view/admin_marketplace.html
+++ b/webapp/core/view/admin_marketplace.html
@@ -70,7 +70,7 @@ function makeButton($module) {
 ?>
     <a
         class="btn btn-lg btn-primary"
-        href="<?php echo $module['location']; ?>"
+        href="/admin-modules-download/?url=<?php echo urlencode($module['location']); ?>"
         <?php if ($moduleAlreadyInstalled) echo 'disabled="disabled"'; ?>
     >
         <?php echo $linkText; ?>
