--- a/webapp/core/view/layout.html
+++ b/webapp/core/view/layout.html
@@ -119,11 +119,8 @@
 			</div>
 			<footer>
 			    <p>
-			    	SmartResolution is proudly powered by the <a href="http://fatfreeframework.com/"><?php echo $PACKAGE; ?></a> (v<?php echo $VERSION; ?>) and is licensed under the terms of the GPLv3. <a href="https://github.com/ChrisBAshton/smartresolution">View the project on GitHub</a>.
+			    	SmartResolution is proudly powered by the <a href="http://fatfreeframework.com/"><?php echo $PACKAGE; ?></a> (v<?php echo $VERSION; ?>) and is licensed under the terms of the GPLv3. <a href="https://github.com/ChrisBAshton/smartresolution">View the project on GitHub</a>. Dashboard icons designed by Freepik.
 				</p>
-			    <p class="stats">
-			    	<code><?php echo Base::instance()->format('Page rendered in {0} msecs / Memory usage {1} Kibytes',round(1e3*(microtime(TRUE)-$TIME),2),round(memory_get_usage(TRUE)/1e3,1)); ?></code>
-			    </p>
 			</footer>
 		</div>
 	</body>
